--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Swiper demo</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Almendra+SC&family=Inter:wght@100..900&family=Krona+One&family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Marvel:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <title>Title</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -17,26 +21,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/stayle.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
-    />
-    <!-- Link Swiper's CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
-
-    <!-- Demo styles -->
   </head>
-
   <body>
     <!-- navbar -->
 
@@ -86,18 +71,18 @@
     <section class="container mt-5 pt-5">
       <div class="section">
         <div>
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/mushak.webp" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>Sehr va Mushaklar</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="./explore.html" class="btn btn-primary p-1 w-100"
+                    <a href="./open.html" class="btn btn-primary p-1 w-100"
                       >explore</a
                     >
                   </div>
@@ -107,15 +92,17 @@
 
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/3.jpg" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>Iblislar Qotili</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
+                    <a href="/demoslayer.html" class="btn btn-primary p-1 w-100"
+                      >explore</a
+                    >
                   </div>
                 </div>
               </div>
@@ -123,15 +110,17 @@
 
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/4.jpg" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>jujutsu kaisen</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
+                    <a href="/jujutsi.html" class="btn btn-primary p-1 w-100"
+                      >explore</a
+                    >
                   </div>
                 </div>
               </div>
@@ -139,15 +128,17 @@
 
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/5.jpg" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>Arra Odam</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
+                    <a href="/arraodam.html" class="btn btn-primary p-1 w-100"
+                      >explore</a
+                    >
                   </div>
                 </div>
               </div>
@@ -155,15 +146,17 @@
 
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/6.webp" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>Tokio Qasoskorlari</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
+                    <a href="/tokio.html" class="btn btn-primary p-1 w-100"
+                      >explore</a
+                    >
                   </div>
                 </div>
               </div>
@@ -171,15 +164,17 @@
 
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/7.jpg" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>Shamol Boysindiruv</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
+                    <a href="/shamol.html" class="btn btn-primary p-1 w-100"
+                      >explore</a
+                    >
                   </div>
                 </div>
               </div>
@@ -187,15 +182,17 @@
 
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/8.jpg" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>Yolgizlikda Kotarlish</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
+                    <a href="/solo.html" class="btn btn-primary p-1 w-100"
+                      >explore</a
+                    >
                   </div>
                 </div>
               </div>
@@ -203,79 +200,17 @@
 
             <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
               <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
+                <img src="./img/9.jpg" alt="" width="100%" />
                 <div class="content">
-                  <h2>Magic and Muscles</h2>
+                  <h2>Mohir Hunarmand</h2>
                   <div class="des">
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                       Quisquam, quae, quo, quos, quas, quidem.
                     </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
-              <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
-                <div class="content">
-                  <h2>Magic and Muscles</h2>
-                  <div class="des">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Quisquam, quae, quo, quos, quas, quidem.
-                    </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
-              <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
-                <div class="content">
-                  <h2>Magic and Muscles</h2>
-                  <div class="des">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Quisquam, quae, quo, quos, quas, quidem.
-                    </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
-              <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
-                <div class="content">
-                  <h2>Magic and Muscles</h2>
-                  <div class="des">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Quisquam, quae, quo, quos, quas, quidem.
-                    </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="mt-5 col-xl-3 col-lg-3 col-md-4 col-sm-6 col-12">
-              <div class="section_card">
-                <img src="./img/magic and muscles.jpg" alt="" width="100%" />
-                <div class="content">
-                  <h2>Magic and Muscles</h2>
-                  <div class="des">
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Quisquam, quae, quo, quos, quas, quidem.
-                    </p>
-                    <a href="#" class="btn btn-primary p-1 w-100">explore</a>
+                    <a href="/world.html" class="btn btn-primary p-1 w-100"
+                      >explore</a
+                    >
                   </div>
                 </div>
               </div>
